@@ -1,4 +1,6 @@
 Version 1.13.11:
+ * WML Engine:
+   * File paths are now case sensitive even on Windows.
 
 Version 1.13.10:
  * Add-ons client:
